--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -14,7 +14,7 @@ $color-selected:#00bfd6;
 $color-success: #00bd56;
 
 //dolatsara
-$color-purple : #4a1f61;
+$color-purple : #471d58;
 $color-gray-4:#b8b8b8;
 $color-gray-2-2:#ADB0B3;
 $color-gray-5:#e9e9e9;
